[package]
name = "tor_entry_obtainer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
libnetrangemerge = "0.1.0"
reqwest = { version = "0.12", features = ["brotli", "gzip", "deflate", "hickory-dns"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
